[package]
name = "modrinth-apitool"
version = "0.3.0"
edition = "2021"
authors = ["FlorianXXIV"]
description = "A command line interface for interacting with the modrinth api to manage you minecraft mods more easily."
license = "AGPL-3.0"
repository = "https://github.com/FlorianXXIV/modrinth-apitool"

[dependencies]
argparse = "0.2.2"
base16ct = {version="0.2.0", features=["alloc", "std"]}
colored = "2.2.0"
reqwest = {version="0.12",features=["blocking","json"]}
serde = {version="1.0.214",features=["derive"]}
serde_json = "1.0.132"
sha2 = "0.10.8"
toml = "0.8.19"
